syntax = "proto3";
import "google/protobuf/empty.proto";
package twopcserver;
option go_package = "Twopc-cli/twopcserver;twopcserver";
service TwoPhaseCommitService {
    rpc CreateAccount(CreateAccountRequest) returns (Response);
    rpc DeleteAccount(DeleteAccountRequest) returns (Response);
    rpc ReadAccount(ReadAccountRequest) returns (Response);
    rpc UpdateAccount(UpdateAccountRequest) returns (Response);
    rpc BeginTransaction(BeginTransactionRequest) returns (Response);
    rpc Commit(CommitRequest) returns (Response);
    rpc Abort(AbortRequest) returns (Response);
    rpc Reset(google.protobuf.Empty) returns (Response);
}
// if operation successed err is false and msg is "successed"
// of err is true and msg is the cause
message Response {
    string msg = 1;
}
// if account has been created, fail
message CreateAccountRequest {
    int64 account_id = 2;
}
// if account does not exsist, fail
message DeleteAccountRequest {
    int64 account_id = 2;
}
// if account does not exsist, fail
message ReadAccountRequest {
    int64 account_id = 2;
}
// set account's balance to the amount and the amonunt must >= 0
// if account does not exsist, fail
message UpdateAccountRequest {
    int64 account_id = 2;
    int64 amount = 3;
}
// trasnsaction id and account id must be saved in grpc server
//account balance must >= -amount
message BeginTransactionRequest {
    int64 account_id = 2;
    int64 amount = 3;
    int64 transaction_id = 4;
}
// do the saved operation and released saved ids 
message CommitRequest {
    int64 account_id = 2;
    int64 transaction_id = 3;
}
//do nothing but released saved ids
message AbortRequest {
    int64 account_id = 2;
    int64 transaction_id = 3;
}



